; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/stm/extr_stm32_sai_sub.c_stm32_sai_mclk_disable.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/stm/extr_stm32_sai_sub.c_stm32_sai_mclk_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.stm32_sai_mclk_data = type { %struct.stm32_sai_sub_data* }
%struct.stm32_sai_sub_data = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"Disable master clock\0A\00", align 1
@STM_SAI_CR1_REGX = common dso_local global i32 0, align 4
@SAI_XCR1_MCKEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.clk_hw*)* @stm32_sai_mclk_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stm32_sai_mclk_disable(%struct.clk_hw* %0) #0 {
  %2 = alloca %struct.clk_hw*, align 8
  %3 = alloca %struct.stm32_sai_mclk_data*, align 8
  %4 = alloca %struct.stm32_sai_sub_data*, align 8
  store %struct.clk_hw* %0, %struct.clk_hw** %2, align 8
  %5 = load %struct.clk_hw*, %struct.clk_hw** %2, align 8
  %6 = call %struct.stm32_sai_mclk_data* @to_mclk_data(%struct.clk_hw* %5)
  store %struct.stm32_sai_mclk_data* %6, %struct.stm32_sai_mclk_data** %3, align 8
  %7 = load %struct.stm32_sai_mclk_data*, %struct.stm32_sai_mclk_data** %3, align 8
  %8 = getelementptr inbounds %struct.stm32_sai_mclk_data, %struct.stm32_sai_mclk_data* %7, i32 0, i32 0
  %9 = load %struct.stm32_sai_sub_data*, %struct.stm32_sai_sub_data** %8, align 8
  store %struct.stm32_sai_sub_data* %9, %struct.stm32_sai_sub_data** %4, align 8
  %10 = load %struct.stm32_sai_sub_data*, %struct.stm32_sai_sub_data** %4, align 8
  %11 = getelementptr inbounds %struct.stm32_sai_sub_data, %struct.stm32_sai_sub_data* %10, i32 0, i32 1
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = call i32 @dev_dbg(i32* %13, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %15 = load %struct.stm32_sai_sub_data*, %struct.stm32_sai_sub_data** %4, align 8
  %16 = getelementptr inbounds %struct.stm32_sai_sub_data, %struct.stm32_sai_sub_data* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* @STM_SAI_CR1_REGX, align 4
  %19 = load i32, i32* @SAI_XCR1_MCKEN, align 4
  %20 = call i32 @regmap_update_bits(i32 %17, i32 %18, i32 %19, i32 0)
  ret void
}

declare dso_local %struct.stm32_sai_mclk_data* @to_mclk_data(%struct.clk_hw*) #1

declare dso_local i32 @dev_dbg(i32*, i8*) #1

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
